# pysbf2

./: .gitignore  CITATION.bib  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checkpr.yml  main.yml
docs/: conf.py  index.rst  modules.rst  pysbf2.rst
examples/: benchmark.py  sbfcommands.py  sbffile.py
src/pysbf2/: __init__.py  _version.py  exceptions.py  sbfhelpers.py  sbfmessage.py  sbfreader.py  sbftypes_blocks.py  sbftypes_core.py  sbftypes_decodes.py  sbftypes_get.py
tests/: __init__.py  test_parse.py  test_static.py  test_stream.py
